# seticore

./: .dockerignore  .gitignore  .gitmodules  BERKELEY.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  ROADMAP.md  beamformer.cpp  beamformer.h  beamformer_test.cpp  beamforming_integration_test.cpp  beamforming_pipeline.cpp  beamforming_pipeline.h  blockls.cpp  complex_buffer.cpp  complex_buffer.h  cuda_util.cu  cuda_util.h  dat_file_writer.cpp  dat_file_writer.h  dedoppler.cpp  dedoppler.h  dedoppler_hit.cpp  dedoppler_hit.h  dedoppler_hit_group.cpp  dedoppler_hit_group.h  dedoppler_test.cpp  device_raw_buffer.cpp  device_raw_buffer.h  event_file_writer.cpp  event_file_writer.h  extract.cpp  fil_reader.cpp  fil_reader.h  fil_reader_test.cpp  file_io_benchmark.cpp  filterbank_buffer.cpp  filterbank_buffer.h  (+72 more)
SCAFFOLD/: ARCHITECTURE.md  MULTI_ARCH_STRATEGY.md  NOTES.md
backend/: CUDABackend.h  ComputeBackend.h  CpuStubBackend.h  SYCLBackend.h
catch/: README.md
data/: .gitignore
python/: README.md  crosscheck.py  example.ipynb  requirements.txt  viewer.py
src/backend/: ComputeBackend.h  CpuReferenceBackend.h  CudaBackend.cu  CudaBackend.h  NPUBackend.cpp  NPUBackend.h  SyclBackend.h  SyclKernels.h  TPUBackend.cpp  TPUBackend.h
